# cpp

./: .gitignore  README.md
aligned_malloc/: aligned_malloc.c  aligned_malloc.cc  aligned_malloc.h  main.c  main.cc
c_oop/: shape.c  shape.h
cpuinfo/: .gitignore  Makefile  README.md  cpu_arch.h  cpuid_x86.h  instruction_set.cc  instruction_set.h  test_isa.cc
dynamic_lib/: CMakeLists.txt  README.md
dynamic_lib/src/: CMakeLists.txt  Makefile  call_test.cc  dl_test.cc  mathlib.cc  mathlib.h
fastAtan/: fastAtanf.cpp  test.cpp
fastExp/: avx512test.cpp  fastExp_scalar.h  fastExpr_scalar.hpp  fastSimdExp.h  main.cpp  orgFastSimdExp.h  readme.md  simdExp.h  test.cpp
fastExp/instantiation/: fastSimdExp.cpp
fastExp/template/: simdExp_M2_AVX.cpp  simdExp_M2_AVX2_FMA.cpp  simd_exp_M1.cpp
fastMath/: cephes_exp.h  fastSimdExp.h  main.cpp
filesystem/: FileSystem.cc  FileSystem.h  test.cc
func_pointer/: func_pointer.cc
macro/: README.md  cpu_arch.h  export.h
move/: .gitignore  Makefile  array.h  test-move  test_move.cc
python_call/pybind11/: call.py  makefile  superfastcode.cc  tanh.py
registry/: registry.cc
stl/: README.md  allocator.h  array.h  make_pair.h  type_traits.h  vector.h
time/: time_v1.c
tostring/: main.cc
